@@ -20,7 +20,7 @@ endif
 with_headers = --with-headers=$(shell pwd)/debian/include --enable-kernel=$(call xx,MIN_KERNEL_SUPPORTED)
 
 # udeb Config
-#udeb_extra_cflags = -Os
+udeb_extra_cflags = -Os
 udeb_MIN_KERNEL_SUPPORTED = 2.6.1
 udeb_add-ons = linuxthreads $(add-ons)
 udeb_extra_config_options = $(extra_config_options) --disable-sanity-checks
