@@ -2,7 +2,6 @@ libc_extra_config_options = $(extra_config_options) --disable-sanity-checks
 
 # udeb Config
 udeb_MIN_KERNEL_SUPPORTED = 2.4.1
-udeb_extra_cflags = -Os
 
 # NPTL Config
 GLIBC_PASSES += nptl
