@@ -125,8 +125,9 @@ glibc (2.3.6-11) UNRELEASED; urgency=low
     sarge into etch.
   * debian/sysdeps/kfreebsd.mk: build the udeb package with -Os on
     kfreebsd-i386 and kfreebsd-amd64.
-  * debian/sysdeps/*.mk: build the udeb with -Os on amd64, i386, mips and 
-    mipsel, powerpc and sparc.
+  * debian/sysdeps/*.mk: build the udeb with -Os on amd64, i386, mips and
+    s390.
+  * debian/sysdeps/hppa.mk: build the udeb with gcc 4.1.
   * debian/sysdeps/arm.mk: set udeb_MIN_KERNEL_SUPPORTED to 2.4.1, as the
     arm build daemons are still running a 2.4 kernel.
   * patches/kfreebsd/local-sysdeps.diff: update to revision 1577 (from
